updated logic on product and product variants